{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "CameraMovement",
            "id": "1f732911-008f-48fe-a68b-5ccbefb99418",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "78b272f9-807c-464d-b395-3a2412d6d93f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2974501e-9153-4aad-b557-e5b2f8ac1413",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "PassThrough",
                    "id": "8391e7cf-5398-4c06-ac5d-2e9653810ba4",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "wasd",
                    "id": "ae6bd4b0-fd8f-4d70-b409-3bebc5651f40",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0d362f38-383e-4d2d-8d22-3be20125b807",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c5ba690a-4c19-451b-b692-3825b60b0c75",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "160ab564-c0f7-4408-b37c-d246d57b3fbb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1652fc54-b92c-47f5-84f8-54876586d63a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "790df3cc-3719-459a-83c2-87b133cd46db",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4704398-3aa5-48df-a57a-4d7cf0ec3844",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameplayActions",
            "id": "4a142bb6-1b5d-4c61-ad8b-d3d1b18dd2a4",
            "actions": [
                {
                    "name": "MouseLeftButton",
                    "type": "Button",
                    "id": "bab526fc-a531-4730-872a-eee948f46049",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9d822eec-01e3-4f5e-82bb-858f5a864740",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLeftButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}